# claude-code-primer

./: CHANGELOG.md  CLAUDE.md  README.md  pixi.toml
.claude/memory/: MEMORY.md  feedback_readme_per_project.md
docs/: claude_code_complete_guide.docx  claude_code_complete_guide.md
projects/agents-work/: .pre-commit-config.yaml  CLAUDE.md  README.md  pixi.toml  pyproject.toml
projects/agents-work/.claude/agents/: code-reviewer.md
projects/agents-work/src/agents_work/: __init__.py
projects/data-wrangler/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yml  pyproject.toml  sbom.cyclonedx.json
projects/data-wrangler/.github/workflows/: ci.yml
projects/data-wrangler/src/datawrangler/: __init__.py  aggregate.py  clean.py  io.py  transform.py
projects/data-wrangler/tests/: conftest.py
projects/data-wrangler/tests/integration/: conftest.py  test_io.py
projects/data-wrangler/tests/unit/: test_aggregate.py  test_clean.py  test_io.py  test_transform.py
projects/django-demo/: .gitignore  requirements.txt  sbom.cyclonedx.json
projects/django-demo/config/: settings.py
projects/django-demo/notes/: models.py  serializers.py  views.py
projects/fastapi-project/: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  alembic.ini  pixi.toml  pyproject.toml
projects/fastapi-project/.claude/: settings.json
projects/fastapi-project/.claude/skills/deploy/: SKILL.md
projects/fastapi-project/.claude/skills/test/: SKILL.md
projects/fastapi-project/alembic/: env.py
projects/fastapi-project/src/fastapi_project/: __init__.py  dependencies.py  main.py
projects/fastapi-project/src/fastapi_project/db/: __init__.py  models.py  session.py
projects/fastapi-project/src/fastapi_project/models/: item.py
projects/fastapi-project/src/fastapi_project/repositories/: item_repository.py
projects/fastapi-project/src/fastapi_project/routers/: health.py  items.py
projects/fastapi-project/src/fastapi_project/services/: item_service.py
projects/fastapi-project/tests/: __init__.py  conftest.py
projects/fastapi-project/tests/integration/: __init__.py  conftest.py  test_items.py
projects/fastapi-project/tests/unit/: __init__.py  test_health.py  test_item_service.py  test_items_router.py
projects/my-cli-tool/: .pre-commit-config.yaml  CLAUDE.md  README.md  pixi.toml  pyproject.toml  sbom.cyclonedx.default.json  sbom.cyclonedx.py312.json  sbom.cyclonedx.py314.json
projects/my-cli-tool/.claude/skills/pixi-info/: SKILL.md
projects/my-cli-tool/.github/workflows/: ci.yml
projects/my-cli-tool/src/logwatch/: __init__.py  __main__.py  cli.py  output.py  watcher.py
projects/my-cli-tool/tests/: __init__.py  test_cli.py  test_output.py  test_watcher.py
projects/skills-work/: .gitignore  .pre-commit-config.yaml  README.md  pixi.toml  pyproject.toml
projects/skills-work/.claude/: hookify.block-dangerous-rm.local.md
projects/skills-work/.claude/skills/generate-python-sbom/: README.md  SKILL.md
projects/skills-work/.claude/skills/greetings/: SKILL.md
projects/skills-work/.claude/skills/new-py-module/: SKILL.md
projects/skills-work/.claude/skills/new-py-module/references/: templates.md
projects/skills-work/src/skills_work/: __init__.py  my_module.py
projects/skills-work/tests/unit/: test_my_module.py
