[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agents-work"
version = "0.1.0"
description = "Claude Agent SDK examples — multi-agent orchestration, subagents, background agents, and agent teams"
requires-python = ">=3.12"

[tool.hatch.build.targets.wheel]
packages = ["src/agents_work"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests requiring real I/O or network",
]

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "RUF", "D"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["agents_work"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
