[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logwatch"
version = "0.1.0"
description = "Monitor log files for patterns with real-time tail and colored output"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "rich>=13.7",
]

[project.scripts]
logwatch = "logwatch.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/logwatch"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 88
src         = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["logwatch"]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version    = "3.12"
strict            = true
warn_return_any   = true
warn_unused_configs = true
